[package]
name = "memsecurity"
version = "3.3.1"
authors = ["448 ENGINEERING DESIGN DEVELOPERS <superuser@448.africa>"]
license = "Apache-2.0 OR MIT"
description = "Securely hold secrets in memory and protect them against cross-protection-boundary readout via microarchitectural, via attacks on physical layout, and via coldboot attacks."
keywords = ["in-memory", "security"]
categories = ["cryptography", "memory-management"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/448-engineering/MEMSECURITY"
repository = "https://github.com/448-engineering/MEMSECURITY"

[badges]
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.5.2", features = ["bytes"], optional = true }
arrayvec = { version = "0.7.4", default-features = true, features = [
    "zeroize",
], optional = true }
blake3 = { version = "1.4.1", default-features = true, optional = true }
borsh = { version = "1.0.0-alpha.4", features = ["bytes", "derive", "std"] }
bytes = { version = "1.5.0", optional = true }
chacha20poly1305 = { version = "0.10.1", features = [
    "reduced-round",
], optional = true }
ed25519-dalek = { version = "2.0.0", features = [
    "signature",
    "zeroize",
], optional = true }
memsec = { version = "0.6.3", optional = true }
once_cell = { version = "1.18.0", optional = true }
rand_chacha = { version = "0.3.1", default-features = false, optional = true }
rand_core = { version = "0.6.4", features = ["getrandom"], optional = true }
x25519-dalek = { version = "2.0.0", features = [
    "zeroize",
    "static_secrets",
], optional = true }
zeroize = { version = "1.6.0", default-features = false, features = ["derive"] }

[features]
default = ["full"]
encryption = [
    "dep:aead",
    "dep:chacha20poly1305",
    "dep:once_cell",
    "random",
    "dep:memsec",
    "dep:blake3",
    "symm_asymm",
]
random = ["dep:rand_core", "dep:rand_chacha"]
ed25519 = ["dep:ed25519-dalek"]
x25519 = ["dep:x25519-dalek"]
symm_asymm = ["dep:bytes", "dep:arrayvec", "dep:blake3"]
clonable_mem = []
full = [
    "symm_asymm",
    "clonable_mem",
    "random",
    "encryption",
    "ed25519",
    "x25519",
]

[profile.dev]
overflow-checks = true

[profile.release]
opt-level = 3
strip = "debuginfo"
overflow-checks = true
lto = "thin"
